[gd_scene load_steps=6 format=3 uid="uid://c1x8kt3rd6c21"]

[ext_resource type="Script" uid="uid://cjlyiyw7pcl8m" path="res://Scripts/WinMenu.gd" id="1_l763u"]
[ext_resource type="AudioStream" uid="uid://bawghljfwfwou" path="res://Assets/Sounds/SongWin.wav" id="2_q7l2s"]
[ext_resource type="Texture2D" uid="uid://drw870fkykhia" path="res://Assets/Sprites/menu.png" id="2_rnswt"]
[ext_resource type="Texture2D" uid="uid://5gf1utgqp40t" path="res://Assets/Sprites/nextbutton.png" id="4_fu86e"]

[sub_resource type="LabelSettings" id="LabelSettings_y2c35"]
font_size = 92
shadow_color = Color(0, 0, 0, 0.498039)
shadow_offset = Vector2(8.775, 10.72)

[node name="WinMenu" type="ColorRect"]
process_mode = 3
visible = false
custom_minimum_size = Vector2(1920, 1280)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -640.0
offset_right = 960.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.627, 0, 0.314, 0.779)
script = ExtResource("1_l763u")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(974, 640)
texture = ExtResource("2_rnswt")

[node name="SongWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_q7l2s")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 437.0
offset_top = 595.0
offset_right = 1685.0
offset_bottom = 721.0
text = "YOU WIN"
label_settings = SubResource("LabelSettings_y2c35")
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="."]
layout_mode = 2
offset_left = 460.0
offset_top = 763.0
offset_right = 1708.0
offset_bottom = 1062.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 96
action_mode = 0
flat = true

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 1614.0
offset_top = 411.0
offset_right = 1734.0
offset_bottom = 539.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 96
action_mode = 0
flat = true

[node name="Nextbutton" type="Sprite2D" parent="."]
position = Vector2(1060, 901)
texture = ExtResource("4_fu86e")

[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
